      as there is no recommended alternative.
    - Improved the suggested fix warning when component resolution uses regex
      fallback for fully qualified component names.
    - Catalyst::Test::local_request sets ->request on the response.
    - Require HTTP::Request 5.814 and HTTP::Response 5.813 from LWP 5.814
      to avoid test fails.

  Documentation:
    - Document no-args call to $c->uri_for.
    - Document all top level application configuration parameters.

  New features:
    - Added disable_component_resolution_regex_fallback config option to
      switch off (deprecated) regex fallback for component resolution.
    - Added an nginx-specific behavior to the FastCGI engine to allow
      proper PATH_INFO and SCRIPT_NAME processing for non-root applications
    - Enable Catalyst::Utils::home() to find home within Dist::Zilla built
      distributions

5.80013 2009-09-17 11:07:04

   Bug fixes:
     - Preserve immutable_options when temporarily making a class mutable in
       Catalyst::ClassData as this is needed by new Class::MOP.
       This could have potentially caused issues when using the deprecated runtime
       plugins feature in an application with plugins which define their own new
       method.
     - Require new Moose version and new versions of various dependencies
       to avoid warnings from newest Moose release.
     - Fix go / visit expecting captures and arguments in reverse order.

  Documentation:
     - Rework the $c->go documentation to make it more clear.
     - Additional documentation in Catalyst::Upgrading covering more deprecation
       warnings.

  Refactoring / cleanups:
     - Action methods in the application class are deprecated and applications
       using them will now generate a warning at startup.
     - The -short option has been removed from catalyst.pl, stopping new
       applications from being generated using the ::[MVC]:: naming scheme as
       this is deprecated and generates warnings. RT#49771
